--- a/src/Client/Features/Shared/Layout/MainLayout.razor
+++ b/src/Client/Features/Shared/Layout/MainLayout.razor
@@ -19,10 +19,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">
+                            <i class="fa fa-home me-1" aria-hidden="true"></i>
+                            Home
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard">Dashboard</a>
+                        <a class="nav-link" href="/dashboard">
+                            <i class="fa fa-tachometer-alt me-1" aria-hidden="true"></i>
+                            Dashboard
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hl7/testing">
